# distintivos-automaticos

./: .gitignore  README.md  autodistintivos.py  convert.sh  main.sh  pyproject.toml
