[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "autodistintivos"
authors = [{name = "Juan Luis Cano Rodríguez", email = "hello@juanlu.space"}]
readme = "README.md"
dependencies = [
    "click",
    "pypdf",
    "reportlab",
    "rich",
    "structlog",
]
dynamic = ["version", "description"]

[tool.isort]
profile = "black"
